# WatchlistBot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  BOT.bat  CONTRIBUTING.md  MODULE_MAP.md  README.md  SECURITY.md  UNUSED_MODULES.md  VERSION_HISTORY.md  assistant_vocal.py  audit_codex_summary.md  decision_engine.py  env.example  final_documentation_combined.md  gitignore  kounach_poc.py  module_map.json  movers_detector.py  prescreen.py  pump_score.py  py_files.txt  pyproject.toml  pytest.ini  refactor_tasks.json  requirements.txt  run_end_to_end.bat  run_end_to_end.sh  run_tests.bat  run_tests.sh  schema_update.sql  sitecustomize.py  start_watchers.py  sync_watchlist_to_scores.py  sync_with_github.bat  telegram_notifier.py  train_finrl_model.py  watchlist_loop.py
JobAutomationAssistant/: README.md  app.py  assistant_emploi_quebec.py  assistant_emploi_quebec1.py  contractor_quebec_app.py  index.py  jobtracker.db  requirements.txt
Nouveau dossier/: app.py  contractor_quebec_app.py  index.py  jobtracker.db  quebec_tenders.db
USER STORIES/: USER_STORIES_COUVERTURE_TOTALE.xlsx  USER_STORIES_EPIC_27_AUDIT_MODULES.xlsx  USER_STORIES_FINAL_AVEC_AI_PERFORMANCE.xlsx  USER_STORIES_JOURNALISATION_TRADES.xlsx  USER_STORIES_KPI_TRACKER.xlsx  USER_STORIES_META_IA_CONFIG.xlsx  USER_STORIES_NEWS_CATALYST_DETECTION.xlsx  USER_STORIES_ORGANISEES_PAR_EPIC.xlsx  USER_STORIES_PATTERN_RECOGNITION.xlsx  USER_STORIES_PROJECT_PRODUCTIVITY.xlsx  USER_STORIES_SECURITY_GUARD_STOPLOSS.xlsx  USER_STORIES_SIMULATION_ENGINE.xlsx  USER_STORIES_TELEGRAM_NOTIFICATIONS.xlsx  (+2 more)
cafe/: app.py  (+3 more)
(+367 files in other folders)
