[project]
name = "watchlistbot"
version = "0.0.1"
description = "WatchlistBot V7 — daily trading assistant"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Karim" }]

dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "requests>=2.32",
  "httpx>=0.27",
  "tenacity>=8.3",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "typer>=0.12",
  "tqdm>=4.66",
  "yfinance>=0.2.40",
  "streamlit>=1.36",
  "polars>=0.20",
  "aiohttp>=3.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-requests",
  "bandit>=1.7.8",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "vulture>=2.11",
  "pipdeptree>=2.23",
  "pandera>=0.18"
]

[tool.ruff]
line-length = 100
extend-exclude = [".venv", "dist", "build", "data"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL"]
ignore = ["E203","E266","E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=85"
